<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <ImageView
        android:id="@+id/book_item_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/book_item_content_description"
        app:srcCompat="@drawable/ableson" />

    <TextView
        android:id="@+id/book_item_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/book_item_title_placeholder"
        style="@style/book_title" />

    <TextView
        android:id="@+id/book_item_pub_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        android:text="@string/book_item_date_placeholder"
        style="@style/book_pub_date" />

    <TextView
        android:id="@+id/book_item_short_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/book_item_sd_placeholder" />

</LinearLayout>